@@ -4,6 +4,10 @@ Changelog
 4.0.2 - unreleased
 ------------------
 
+- Force the user to select a language before attempting to translate
+  some content item.
+  [witsch]
+
 - Don't create an extra folder when translating the default page of a
   language-neutral folder.
   [witsch]
